<resources>
    <string name="app_name">Escuela Informatica</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_mruv">MRUV</string>
    <string name="title_activity_programacion_dinamica">Programacion Dinamica</string>
    <string name="nota_fuente_arq8086">Fuente: <i>https://es.wikipedia.org/wiki/Intel_8086_y_8088</i> ,para obtener más información.</string>
    <string name="concepto_registros8086"><u><b>Registros de 8086:</b></u> El procesador 8086 tiene 14 registros divididos en 3 grupos de 4 mas los registros PC(IP) y FLAGS. Los registros de datos se usan a veces de forma implícita por las instrucciones, haciendo más difícil la organización de los registros para emplearlos con valores temporales.
    \nLos registros del procesador, se usan para contener los datos con que se está trabajando puesto que el acceso a los registros es mucho más rápido que los accesos a memoria. Se pueden realizar operaciones aritméticas y lógicas, comparaciones, entre otras. Se pueden hacer estas operaciones con todos los registros excepto los de segmento, el IP, y los flags.
    \n<b>A) Registros de Propósito General:</b> Los registros de propósito general son el AX, BX, CX, y DX, de 16 bits. Cada uno de ellos se divide en dos registros de 8 bits, llamados AH y AL, BH y BL, CH y CL, y, DH y DL, H significando High (alto) y L significando Low (bajo), indicando la parte alta o la parte baja del registro correspondiente de 16 bits (ver esquema). Un programa podía usar tanto los registros de 16 bits como los registros de 8 bits. Aparte del uso general de los registros para hacer cálculos aritméticos y lógicos, existen instrucciones que usan estos registros con un uso particular especializado, como se indica a continuación:
    \n•<i><b>Registro AX:</b></i> Es el registro acumulador, es utilizado para operaciones que implican entrada/salida, multiplicación y división (estas dos últimas en conjunto con el registro DX).
    \n•<i><b>Registro BX:</b></i> Es el registro base, y es el único registro de propósito general que puede ser un índice para direccionamiento indexado.
    \n•<i><b>Registro CX:</b></i> Es conocido como el registro contador. Puede contener un valor para controlar el número de veces que un ciclo se repite o un valor para corrimiento de bits.
    \n•<i><b>Registro DX:</b></i> Es el registro de datos. En algunas operaciones se indica mediante este registro el número de puerto de entrada/salida, y en las operaciones de multiplicación y división de 16 bits se utiliza junto con el acumulador AX.</string>
    <string name="descrip_imgregprop"><b>Imagen:</b> Modelo de registros de propósito general</string>
    <string name="concepto_registros8086_2"><b>B) Registros Índice:</b> Los registros SI y DI están disponibles para direccionamiento indexado y para operaciones de cadenas de caracteres.
    \n•<i><b>Registro SI:</b></i> El registro índice fuente de 16 bits es requerido por algunas operaciones con cadenas de caracteres. El SI está asociado con el segmento DS.
    \n•<i><b>Registro DI:</b></i> El registro índice destino también es requerido por algunas operaciones con cadenas de caracteres. El DI está asociado con el segmento ES. <b>C) Registros Apuntadores:</b> Los registros SP (apuntador de pila) y BP (apuntador base) están asociados con el registro SS y permiten al sistema acceder a datos en el segmento de la pila.
    \n•<i><b>Registro SP:</b></i> El apuntador de pila de 16 bits está asociado con el segmento SS y proporciona un valor de desplazamiento que se refiere a la palabra actual que está siendo procesada en la pila. El sistema maneja de manera automática este registro, aunque el programa puede hacer ciertas manipulaciones con él.
    \n•<i><b>Registro BP:</b></i> El apuntador base de 16 bits facilita la referencia de parámetros dentro de la pila.</string>
    <string name="descrip_imgregindices"><b>Imagen:</b> Modelo de registros índices (punteros de 16 bit).</string>
    <string name="concepto_registros8086_3"><b>C) Registros de Banderas:</b> Es un registro de 16 bits, de los cuales nueve sirven para indicar el estado actual de la máquina y el resultado del procesamiento. Muchas instrucciones aritméticas y de comparación cambian el estado de las banderas y apoyándose en ellas se pueden tomar decisiones para determinar la acción subsecuente.
    \nLa tabla contiene 16 posiciones (de 0 a 15), que son los 16 bits del registro de banderas, numeradas de derecha a izquierda. La posición 0 la encontraremos a la derecha y la posición 15 a la izquierda.</string>
    <string name="descrip_imgregflags"><b>Imagen:</b> Modelo de registro Bandera (Flags)</string>
    <string name="descrip_imgregflags_2">Los bits de las banderas son las siguientes:
    \n•OF (overflow, desbordamiento): Indica desbordamiento del bit de mayor orden después de una operación aritmética de números con signo (1=existe overflow; 0=no existe overflow). Para operaciones sin signo, no se toma en cuenta esta bandera.
    \n•DF (dirección): Controla la selección de incremento o decremento de los registros SI y DI en las operaciones con cadenas de caracteres (1=decremento automático; 0=incremento). La bandera DF se controla con las instrucciones STD y CLD.
    \n•IF (interrupción): Controla el disparo de las interrupciones (1=habilita las interrupciones; 0=deshabilita las interrupciones). La interrupción no enmascarable es la única que no puede ser bloqueada por esta bandera. El estado de la bandera IF se controla con las instrucciones STI y CLI.
    \n•TF (trampa): Permite la operación del procesador en modo de depuración (paso a paso)
    \n•SF (signo): Contiene el signo resultante de una operación aritmética (0=positivo; 1=negativo).
    \n•ZF (cero): Indica el resultado de una operación aritmética o de comparación (0=resultado diferente de cero; 1=resultado igual a cero).
    \n•AF (acarreo auxiliar): Contiene el acarreo del bit 3. Esta bandera se prueba con las instrucciones DAA y DAS para ajustar el valor de AL después de una suma o resta BCD.
    \n•PF (paridad): Indica si el número de bits 1, del byte menos significativos de una operación, es par (0=número de bits 1 es impar; 1=número de bits 1 es par).
    \n•CF (acarreo): Contiene el acarreo del bit de mayor orden después de una operación aritmética; también almacena el contenido del último bit en una operación de desplazamiento o de rotación.</string>
    <string name="concepto_registros8086_4"><b>D) Registros de Segmento:</b> Definen áreas de 64 Kb dentro del espacio de direcciones de 1 Mb del 8086. Estas áreas pueden solaparse total o parcialmente. No es posible acceder a una posición de memoria no definida por algún segmento: si es preciso, habrá de moverse alguno.
    \n•<i><b>Registro CS:</b></i> El DOS almacena la dirección inicial del segmento de código de un programa en el registro CS. Esta dirección de segmento, más un valor de desplazamiento en el registro apuntador de instrucción (IP), indica la dirección de una instrucción que es buscada para su ejecución. Para propósitos de programación normal, no se necesita referenciar el registro CS.
    \n•<i><b>Registro DS:</b></i> La dirección inicial de un segmento de datos de programa es almacenada en el registro DS. Esta dirección, más un valor de desplazamiento en una instrucción, genera una referencia a la localidad de un byte específico en el segmento de datos.
    \n•<i><b>Registro SS:</b></i> El registro SS permite la colocación en memoria de una pila, para almacenamiento temporal de direcciones y datos. El DOS almacena la dirección de inicio del segmento de pila de un programa en el registro SS. Esta dirección de segmento, más un valor de desplazamiento en el registro del apuntador de la pila (SP), indica la palabra actual en la pila que está siendo direccionada. Para propósitos de programación normal, no se necesita referenciar el registro SS.
    \n•<i><b>Registro ES:</b></i> Algunas operaciones con cadenas de caracteres utilizan el registro extra de segmento para manejar el direccionamiento de memoria. El registro ES está asociado con el registro DI (Índice). Un programa que requiere el uso del registro ES puede inicializarlo con una dirección de segmento apropiada.</string>
    <string name="descrip_imgregsegm"><b>Imagen:</b> Modelo de registros de segmentos</string>
    <string name="concepto_triggers">Un <b>\"trigger\"</b> (disparador o desencadenador) es un tipo de procedimiento almacenado que se ejecuta automáticamente cuando se intenta modificar (agregar, actualizar o eliminar) los datos de una tabla (o vista).
    \nLos <b>disparadores</b> se ejecutan <b>DESPUES</b> de la ejecución de una instrucción \"insert\", \"update\" o \"delete\" en la tabla en la que fueron definidos mientras que las <b>restricciones</b> se comprueban <b>ANTES</b> de la ejecución de una instrucción \"insert\", \"update\" o \"delete\".
    \nLos triggers se crean con la instrucción \"create trigger\". Esta instrucción especifica la tabla en la que se define el disparador, los eventos para los que se ejecuta (insert, update o delete) y las instrucciones que contiene. Sintaxis básica:</string>
    <string name="sintaxis_triggers">create triggre NOMBREDISPARADOR\n  on NOMBRETABLA\n  for EVENTO  //EVENTO puede ser insert, update o delete\nas\n  SENTENCIAS\n</string>
    <string name="nota_triggers"><b>NOTA:</b>\nLas siguientes instrucciones no están permitidas en un desencadenador: create database, alter database, drop database, restore database, load database, reconfigure, load log, restore log, disk init, disk resize.\nEjemplo:</string>
    <string name="ejemplo_trigger">CREATE TRIGGER trg_TesisAlumno\n   ON  Tesis\n   AFTER insert\nAS\nBEGIN\n	declare @codalum char(10)\n	if exists(select coduniversitario from Alumno\n	 join inserted on inserted.idtesista=Alumno.coduniversitario)\n	begin
        \n		select @codalum=Alumno.coduniversitario\n			from Alumno join inserted\n			on inserted.idtesista=Alumno.coduniversitario\n		update Alumno set tesista=\'1\' where coduniversitario=@codalum\n	end\nEND\nGO\n</string>
    <string name="descrip_trigger">El ejemplo anterior, es de tipo INSERT TRIGGER y su función es que al insertar una Tesis, se actualice el estado del alumno(tesista).\nLos triggers se eliminan con la instrucción \"drop trigger\":</string>
    <string name="info_trigger">Para obtener información de los triggers se puede usar procedimientos almacenados del sistema, como:\n <b>sp_help <i>NOMBREDISPARADOR</i></b> : Retorna el propietario, su tipo, y fecha de creación.\n <b>sp_depends <i>NOMBREDISPARADOR</i></b> : Retorna una tabla de sus dependencias, cuyas columnas son: <i>name</i>(tablas y objetos), <i>type</i> (tipo de objeto), <i>updated</i> (si se modificao no) y <i>column</i>(campo de referencia).\n <b>sp_helptrigger <i>NOMBRETABLA-O-VISTA</i></b> : Retorna una tabla que lista cada trigger: <i>trigger_name</i>(nombre), <i>trigger_owner</i>(propietario), <i>isupdate</i>, <i>isinsert</i>, <i>isdelete</i> (3 columnas anteriores 0 o 1 si realiza dicha acción), <i>isafter</i>, <i>isinsteadof</i> (las 2 columnas anteriores con valores 0 o 1 para sus eventos de inserción).\n
    Se puede deshabilitar o habilitar un disparador específico o todos los disparadores que tenga definidos para una tabla o vista. Si se deshabilita un disparador, éste sigue existiendo, pero no se activa, sintaxis:</string>
    <string name="sintaxis_hab_deshabilitar_trigger">alter table NOMBRETABLA\n  ENABLE | DISABLE trigger ALL | NOMBREDISPARADOR1, NOMBREDISPARADOR2, ...;\n</string>
    <string name="info_hab_deshabilitar_trigger">Donde \"ENABLE | DISABLE\" implica opcionalmente si es <b>ENABLE</b> para habilitar o <b>DISABLE</b> para deshabilitar, lo mismo para \"ALL | NOMBREDISPARADOR1, NOMBREDISPARADOR2, ...\" que implica que si se elije <b>ALL</b>,afecta todos los triggers; sino <b>NOMBREDISPARADOR1, NOMBREDISPARADOR2,..</b> especificando los triggers afectados.</string>
</resources>