<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="chiroque.aplicaciones.com.escuelainformatica.MicrocomputadorasI.Registros8086">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">
            <TextView
                style="@style/textviewteoria.660033"
                android:text="@string/concepto_registros8086"/>
            <HorizontalScrollView
                style="@style/textviewteoria">
                <ImageView
                    style="@style/fullwrap"
                    android:src="@drawable/regpropgen"/>
            </HorizontalScrollView>
            <TextView
                style="@style/textviewteoria.0000FF"
                android:text="@string/descrip_imgregprop"/>
            <TextView
                style="@style/textviewteoria.660033"
                android:text="@string/concepto_registros8086_2"/>
            <HorizontalScrollView
                style="@style/textviewteoria">
                <ImageView
                    style="@style/fullwrap"
                    android:src="@drawable/regindices"/>
            </HorizontalScrollView>
            <TextView
                style="@style/textviewteoria.0000FF"
                android:text="@string/descrip_imgregindices"/>
            <TextView
                style="@style/textviewteoria.660033"
                android:text="@string/concepto_registros8086_3"/>
            <HorizontalScrollView
                style="@style/textviewteoria">
                <ImageView
                    style="@style/fullwrap"
                    android:src="@drawable/regflags"/>
            </HorizontalScrollView>
            <TextView
                style="@style/textviewteoria.0000FF"
                android:text="@string/descrip_imgregflags"/>
            <TextView
                style="@style/textviewteoria.000033"
                android:text="@string/descrip_imgregflags_2"/>
            <TextView
                style="@style/textviewteoria.660033"
                android:text="@string/concepto_registros8086_4"/>
            <HorizontalScrollView
                style="@style/textviewteoria">
                <ImageView
                    style="@style/fullwrap"
                    android:src="@drawable/regsegm"/>
            </HorizontalScrollView>
            <TextView
                style="@style/textviewteoria.0000FF"
                android:text="@string/descrip_imgregsegm"/>
            <TextView
                style="@style/textviewteoria.660033"
                android:text="@string/concepto_registros8086_4"/>
            <TextView
                style="@style/textviewteoria"
                android:text="@string/nota_fuente_arq8086"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
